--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
 /vendor/
 /application/config/
-/assets/qrcode/
+/assets/qrcode
 
 # IDE Files
 #-------------------------
